# quatch

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  setup.cfg  setup.py
.github/workflows/: tests.yml
lcc/cpp/: unix.c
lcc/etc/: bytecode.c
lcc/src/: bytecode.c  c.h  simp.c  stmt.c
quatch/: __init__.py  _compile.py  _instruction.py  _memory.py  _q3asm.py  _qvm.py  instruction.py  instructions.py  memory.py  q3asm.py  qvm.py  util.py
src/quatch/: __init__.py  _memory.py  _q3asm.py  _util.py
tests/: test_memory.py
tests/quake/: .gitignore  __init__.py  test_patch.py
