[metadata]
name = quatch
version = 0.0.1
author = Josh Steffen
author_email = josh0x53@gmail.com
description = A Quake 3 VM patching library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/birdstakes/quatch
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.7

[options.packages.find]
where = src

[flake8]
max-line-length = 88
extend-ignore = E203
